--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <link rel="apple-touch-icon" href="single-page-icon.png">
+</head>
+<body>
 <meta name="apple-mobile-web-app-capable" content="yes">
+</body>
+</html>
