--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html>
 <head>
   <link rel="apple-touch-icon" href="single-page-icon.png">
-</head>
+  <link rel="apple-touch-icon" href="touch-icon-iphone.png">
+<link rel="apple-touch-icon" sizes="152x152" href="touch-icon-ipad.png">
+<link rel="apple-touch-icon" sizes="180x180" href="touch-icon-iphone-retina.png">
+<link rel="apple-touch-icon" sizes="167x167" href="touch-icon-ipad-retina.png">
+  </head>
 <body>
 <meta name="apple-mobile-web-app-capable" content="yes">
 </body>
