--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <link rel="apple-touch-icon" sizes="152x152" href="touch-icon-ipad.png">
 <link rel="apple-touch-icon" sizes="180x180" href="touch-icon-iphone-retina.png">
 <link rel="apple-touch-icon" sizes="167x167" href="touch-icon-ipad-retina.png">
+  <link rel="apple-touch-startup-image" href="apple-touch-icon.png">
   </head>
 <body>
 <meta name="apple-mobile-web-app-capable" content="yes">
