--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 <link rel="apple-touch-icon" sizes="167x167" href="touch-icon-ipad-retina.png">
   <link rel="apple-touch-startup-image" href="apple-touch-icon.png">
   <meta name="apple-mobile-web-app-title" content="Zinc">
+  <style>
+body {
+   -webkit-user-select: none;
+}
+</style>
   </head>
 <body>
 <meta name="apple-mobile-web-app-capable" content="yes">
