--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <meta name="apple-mobile-web-app-title" content="Zinc">
   <style>
 body {
+   -webkit-tap-highlight-color: transparent;
    -webkit-user-select: none;
 }
 </style>
